2002-08-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (EXTRA_DIST_FILES): Add server.el.patch.

	* scm/grob-property-description.scm
	(beamed-extreme-minimum-free-lengths): New property, now correctly
	named.

	* ly/grace-init.ly: New beam property updates.

	* input/les-nereides.ly: Updates.

	* cygwin/README.in: New file.

	* input/sondag-morgen/GNUmakefile: 
	* input/mutopia/R.Schumann/GNUmakefile: New file.

	* scm/grob-property-description.scm (beamed-minimum-free-lengths):
	(beamed-extreme-free-lengths): New property.

	* lily/beam.cc (forced_stem_count): Count boundary cases too.
	(set_stem_shorten): Integer divide bug fix.

	* input/mutopia/J.S.Bach/baerenreiter-sarabande.ly: Really expect
	6 systems, change warning into error.

	* scm/grob-description.scm (beamed-stem-shorten): Shorten 8th
	beams same as normal stem (one staffspace), high order beams less
	(arbitrary guess).
	(beamed-lengths): Standard length for all beams.
	(beamed-minimum-free-lengths):
o	(beamed-extreme-minimum-free-lengths): New property.

	* input/regression/beam-default-lengths.ly: 
	* input/regression/beam-shortened-lengths.ly: New file.

	* lily/stem.cc (get_stem_info): New function.
	(calc_stem_info): Partial rewrite.

	* scm/grob-description.scm (Beam): same beamed-stem-shorten for
	all beam counts.

2002-08-12  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.5.72 released

	* input/sondag-morgen/GNUmakefile (examples): add file

	* input/mutopia/R.Schumann/GNUmakefile (examples): add file
	
	* lily/lily-guile.cc (to_dir): return CENTER if not a direction.

	* lily/include/grob.hh: remove remove_grob_property()

	* lily/stem-engraver.cc (stop_translation_timestep): remove
	dir-forced grob property

	* Documentation/user/refman.itely (Grace notes): explain grace
	after main note.

	* input/test/ : small convert-ly mishaps.

	* Documentation/user/preface.itely: small bits 

	* Documentation/user/introduction.itely: add sectioning
